Update Java standard library usages and SpotBugs rules